#
# Copyright Alexander Linne 2017 - present.
# Distributed under the Boost Software License, Version 1.0.
# (See accompanying file LICENSE.txt
#     or copy at http://www.boost.org/LICENSE_1_0.txt)
#

cmake_minimum_required(VERSION 3.8)
project(repacpp)
set(REPACPP_VERSION_MAJOR 1)
set(REPACPP_VERSION_MINOR 0)
set(REPACPP_VERSION_MICRO 0)

add_subdirectory(example/matrix_multiplication)
